# telegram_clock

./: .env_example  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  config.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  telegram_clock.py
.github/workflows/: code_style_CI.yml  docker_push.yaml  test.yml
configs/: config_example.yaml
logs/: logfile.log.1  logfile.log.2
telegram_clock/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  telegram_clock.py  utils.py
